# Project-FEA

./: .gitignore  README.md  licence
Cpp/: CMakeLists.txt  CMakeLists.txt.user.4.9-pre1  DiffusionEx.cpp  DiffusionEx.cpp.autosave  DynamicHeatDiff.cpp  DynamicTest.cpp  ElasticVibration.cpp  ElasticityExample.cpp  OneElmntVrfy.cpp  Poisson.cpp  ProjectFEA.hpp  ProjectFea.h  Trial.cpp  Volume.cpp  main.cpp  mainTest.cpp
Cpp/BaseGeom/: Hexahedral.brep  Hexahedral.geo  Hexahedral.hdf  Hexahedral.msh  Line.geo  Quad.brep  Quad.msh  Quadrilateral.geo  Quadrilateral.msh  Tetrahedral.brep  Tetrahedral.hdf  Tetrahedral.msh  Triangle.brep  Triangle.geo  Triangle.msh
Cpp/BoundaryCondtions/: BoundaryConditions.hpp  CMakeLists.txt  DirichletBC.hpp  Expression.hpp  InitialBC.hpp
Cpp/DirichletBC/: CMakeLists.txt  DirichletBC.hpp
Cpp/Dynamic/: CMakeLists.txt  Dynamic.hpp  SingleStepAlgorithm.hpp
Cpp/FEM/: CMakeLists.txt  FemModule.cpp  FemModule.h
Cpp/FEMtools/: BuildCosMatrix.cpp  BuildLocalMatrices.cpp  CMakeLists.txt  FEMtools.h  GetLengthAlongVector.hpp  GetNodePostions.cpp  LoadGaussFile.cpp  LoadGaussFile.h  TestFunctionDot.cpp  VectorizeGradu.cpp  VectorizePhi.cpp  VectorizeX.cpp
Cpp/GaussData/Data/: n10  n11  n12  n13  n14  n15  n16  n17  n18  n19  n2  n20  n21  n22  n23  n24  n25  n26  n27  n28  n29  n3  n30  n31  n32  n33  n34  n35  n36  n37  n38  n39  n4  n40  n41  n42  n43  n44  n45  n46  (+23 more)
Cpp/GaussData/DataTetrahedral/: n1  n15  n4  n5
Cpp/GaussData/DataTriangle/: n1  n3  n4  n6  n7
Cpp/GaussData/~DataTetrahedral/: n5
Cpp/GaussData/~DataTriangle/: n3  n6
Cpp/GmshWriter/: CMakeLists.txt  GmshWriter.hpp
Cpp/Integrator/: CMakeLists.txt  LocalIntegration.hpp  SystemAssembly.hpp
Cpp/Math/: CMakeLists.txt  CrossProduct.hpp  ProjectFEA_Math.hpp  cof.hpp  factorial.hpp  vecnorm.hpp
Cpp/Models/: CMakeLists.txt  FemVariables.cpp  FemVariables.h  Models.hpp  models.cpp  models.h  poisson.cpp
Cpp/Models/Solids/: CMakeLists.txt  LinearElasticity.hpp  PreDefinedElasticityTensor.hpp
Cpp/OneElmntGeom/: Hexahedral.geo  Hexahedral.msh  Line.geo  Line.msh  Quadrilateral.geo  Quadrilateral.msh  Tetrahedral.geo  Tetrahedral.msh  TetrahedralBlock.geo  TetrahedralBlock.msh  Triangle.geo  Triangle.msh
Cpp/ProjectJacobian/: CMakeLists.txt  Jacobian.hpp  f1.hpp  f2.hpp  main.cpp
Cpp/SampleGmsh/: Bar.geo  Bar.msh  Bar2.geo  Bar2.msh  Chimney.geo  Chimney.msh  Chimney2.geo  Chimney2.msh  FaceTri_1.msh  Face_1.geo  Face_1.msh  Face_2.geo.opt  ForkLift.FCStd  ForkLift.FCStd1  ForkLift.brep  ForkLift.geo  ForkLift.msh  ForkLift.step  Hexahedral_1.geo  Hexahedral_1.msh  Hexahedral_2.msh  Rod.geo  Rod.msh  Tetrahedral.msh.old
Cpp/ShapeFunction/: CMakeLists.txt  LagrangeShapeFunction.hpp  LagrangeShapeFunctionAllElementTypes.hpp
Cpp/ShapeFunction/LagrangeShapeFunction/: BuildHexahedralMatrix.hpp  BuildLineMatrix.hpp  BuildQuadMatrix.hpp  BuildTetrahedralMatrix.hpp  BuildTriangleMatrix.hpp  CMakeLists.txt  CheckSupportedOrder.hpp  FindCoeffHexahedral.hpp  FindCoeffLine.hpp  FindCoeffQuad.hpp  FindCoeffTertrahedral.hpp  FindCoeffTriangle.hpp  GmshNodeListGen.h  NumOfHexaNodes.hpp  NumOfLineNodes.hpp  NumOfQuadNodes.hpp  NumOfTetraNodes.hpp  NumOfTriNodes.hpp
Cpp/ShapeFunctions/: ShapeFunction.cpp
Cpp/Solvers/: CMakeLists.txt  Solvers.hpp
Cpp/TestAndTrialFunction/: CMakeLists.txt  Form.hpp  FormMultiThread.hpp  TestFunctionGalerkin.hpp  TrialFunction.hpp  TrialFunctionNeumannLine.hpp  TrialFunctionNeumannSurface.hpp  formmultithread.hpp
Cpp/UserFunctions/: CMakeLists.txt  SetConstants.cpp  UserFunctions.h
Cpp/Variable/: CMakeLists.txt  Variable.hpp
Cpp/armadillo/: CMakeLists.txt
Cpp/armadillo/armadillo_bits/: config.hpp
Cpp/cmake/Modules/: FindGmsh.cmake
Cpp/libGmshReader/: CMakeLists.txt  libGmshReader.cpp  libGmshReader.h
Cpp/libGmshReader/GmshApi/: CMakeLists.txt
Cpp/libMeshReader/: .CMakeLists.txt.kate-swp  CMakeLists.txt  GetElemProperty.cpp  SortAndKeep.cpp  libMeshReader.h
Cpp/tools/: CMakeLists.txt  jacobian.cpp
Octave/: BuildCosMatrix.m  BuildLocalMatrices.m  Dot.m  GetNodePostions.m  InnerProduct.m  LoadGaussFile.m  ScalarDot.m  ShapeFunction.m  ShapeFunction.m.old  TestFunctionDot.m  UserFunction.m  VectorDot.m  VectorizeGradu.m  VectorizePhi.m  VectorizeX.m  f.m  gaussIntegral.m  interpolateX.m  interpolateY.m  interpolateZ.m  jacobian.m  main.m  octave-workspace
Octave/Data/: n10  n11  n12  n13  n14  n15  n16  n17  n18  n19  n2  n20  n21  n22  n23  n24  n25  n26  n27  n28  n29  n3  n30  n31  n32  n33  n34  n35  n36  n37  n38  n39  n4  n40  n41  n42  n43  n44  n45  n46  (+23 more)
Octave/Data2/: n10  n11  n12  n13  n14  n15  n16  n17  n18  n19  n2  n20  n21  n22  n23  n24  n25  n26  n27  n28  n29  n3  n30  n31  n32  n33  n34  n35  n36  n37  n38  n39  n4  n40  n41  n42  n43  n44  n45  n46  (+23 more)
Octave/DataTetrahedral/: convert.m  n1  n15  n4  n5
Octave/DataTetrahedral2/: n1  n15  n4  n5
Octave/DataTriangle/: convert.m  n1  n3  n4  n6  n7
Octave/DataTriangle2/: n1  n3  n4
Octave/SampleGmsh/: FaceTri_1.msh  Face_1.brep  Face_1.geo  Face_1.msh  Face_2.geo  Face_2.msh  Hexahedral_1.msh  Hexahedral_2.geo  Line_1.geo  Line_1.msh  Tetrahedral.brep  TetrahedralLarge.msh  TetrahedralLarge2.msh  Tetrahedral_1.msh  Triangle.brep  Triangle.msh
Octave/libMeshReader/: GetElemProperty.m  GetElementData.m  GetNodeData.m  MeshReader.m  SearchNextString.m  SkipToNextLine.m  SortAndKeep.m  octave-workspace
Octave/libMeshReader2/: GetElementData.m  GetNodeData.m  GetVersion.m  GetWord.m  MeshReader.m  octave-workspace
Octave/old/: K_assmbly.m  bndry_mngr.m  input_mngr.m  k_spring.m  k_truss.m  x_solve.m
